# FMCG

./: .env  .env.example  .gitignore  README.md  calculate_revenue.py  create_tables.py  debug_generation_error.py  debug_new_changes.py  debug_pyarrow.py  error_fix_check.py  pyproject.toml  reference_check.py  requirements.txt  test_daily_transaction_range.py  test_data_types.py  test_employment_fields.py  test_fact_tables_ordering.py  test_generators.py  test_integration.py  test_latest_campaigns.py  test_new_location_generator.py  test_optimization.py  test_pipeline_comprehensive.py  test_production_readiness.py  test_realistic_transactions.py  test_retailer_ranges.py  test_retailer_transactions.py  test_transaction_counts.py  verify_complete_tables.py
.github/workflows/: daily-sales-only.yml  daily-sales.yml  manual-generator.yml  manual-refresh.yml  manual-run.yml  monthly-update.yml  quarterly-update.yml  simulator.yml
FMCG/: auth.py  config.py  daily_sales_only.py  geography.py  helpers.py  id_generation.py  main.py  requirements.txt  run_tests.py  schema.py  test_daily_sales.py  test_relational_consistency.py
FMCG/generators/: bigquery_updates.py  dimensional.py
config/: settings.py
docs/: architecture.md  large_scale_data_guide.md  sales_inventory_synchronization.md  storage_management_guide.md  user_guide.md
scripts/: historical_sync.py  manage_historical_data.py  manage_large_scale.py  manage_storage.py  monthly_update.py  quarterly_campaign_update.py  quick_validate.py  setup.py  synchronize_sales_inventory.py  test_runner.py
src/: main.py
src/core/: generators.py
src/data/: schemas.py
src/etl/: pipeline.py
src/utils/: bigquery_client.py  distribution_analytics.py  historical_data_manager.py  id_generation.py  inventory_sales_sync.py  large_scale_manager.py  logger.py  retailer_status_analytics.py  storage_manager.py
tests/: calculate_transactions.py  simulate_fact_sales.py  simulate_financials.py  test_comprehensive.py  test_distribution_analytics.py  test_generators.py  test_synchronization.py
